--- a/Кредитный конвейер.md
+++ b/Кредитный конвейер.md
@@ -1,6 +1,6 @@
 ![Header](https://github.com/KateSilver2005/KateSilver2005/blob/main/assets/Screenshot_1.jpg)
 
-About me
+## I am a beginner testing engineer 
 
 Latest YouTube Videos
 
