--- a/Кредитный конвейер.md
+++ b/Кредитный конвейер.md
@@ -4,4 +4,4 @@
 
 Latest YouTube Videos
 
-Follow me
+[![Vkontakte](https://img.shields.io/badge/-Vkontakte-090909?style=for-the-badge&logo=Vk&logoColor=4F7DB3)](https://vk.com/katesilver)
