--- a/Кредитный конвейер.md
+++ b/Кредитный конвейер.md
@@ -4,4 +4,6 @@
 
 Latest YouTube Videos
 
+### Socials:
+[![Telegram](https://img.shields.io/badge/-Telegram-090909?style=for-the-badge&logo=telegram&logoColor=27A0D9)]([https://t.me/the_cybermania](https://t.me/kate_silver2005)
 [![Vkontakte](https://img.shields.io/badge/-Vkontakte-090909?style=for-the-badge&logo=Vk&logoColor=4F7DB3)](https://vk.com/katesilver)
