--- a/ПОРТФОЛИО.md
+++ b/ПОРТФОЛИО.md
@@ -1,4 +1,4 @@
-[![Header](https://github.com/KateSilver2005/KateSilver2005/blob/main/assets/Skills-and-abilities-Map-short_dark.png)] target="_blank"(https://disk.yandex.ru/i/CNiqy5byUMSG2w)
+[![Header](https://github.com/KateSilver2005/KateSilver2005/blob/main/assets/Skills-and-abilities-Map-short_dark.png)](target="_blank" https://disk.yandex.ru/i/CNiqy5byUMSG2w)
 
 ## I am a beginner testing engineer 
 
