--- a/ПОРТФОЛИО.md
+++ b/ПОРТФОЛИО.md
@@ -2,8 +2,10 @@
 
 ## I am a beginner testing engineer 
 
-Latest YouTube Videos
-
+***
+## Кредитный конвейер
+- [Тестируемый продукт](http://creditcalculator.pointschool.ru/credit/),
+- <a href="http://stackoverflow.com" target="_blank">Go</a>
 ### Socials:
 [![Telegram](https://img.shields.io/badge/-Telegram-090909?style=for-the-badge&logo=telegram&logoColor=27A0D9)](https://t.me/kate_silver2005)
 [![Vkontakte](https://img.shields.io/badge/-Vkontakte-090909?style=for-the-badge&logo=Vk&logoColor=4F7DB3)](https://vk.com/katesilver)
