--- a/ПОРТФОЛИО.md
+++ b/ПОРТФОЛИО.md
@@ -7,7 +7,7 @@
 - [Требования к продукту](https://docs.google.com/document/d/1JWYExMTe26v58JiZTLQqAhCzkJYJJsJ96YCI2A9lDpM/edit)
 - [Аналитика](https://docs.google.com/spreadsheets/d/1cPUpBKHzZP2vp2ZzI_ZkgpG4zscPX3oKDQTlR6TU2K4/edit?usp=sharing)
 - [Стратегия тестирования](https://docs.google.com/spreadsheets/d/1x1UnZNbuPQ_ihr8JRXUnI5_noBI_A8g1TR9vC4jD5SI/edit?usp=sharing)
-- 
+- [Баг-репорты (several)](https://github.com/KateSilver2005/Bug-reports)
 ### Socials:
 [![Telegram](https://img.shields.io/badge/-Telegram-090909?style=for-the-badge&logo=telegram&logoColor=27A0D9)](https://t.me/kate_silver2005)
 [![Vkontakte](https://img.shields.io/badge/-Vkontakte-090909?style=for-the-badge&logo=Vk&logoColor=4F7DB3)](https://vk.com/katesilver)
